--- a/app/src/main/res/layout/fragment_add_todo.xml
+++ b/app/src/main/res/layout/fragment_add_todo.xml
@@ -30,7 +30,7 @@
         android:layout_alignEnd="@+id/etMission" />
 
     <Button
-        android:id="@+id/btDone"
+        android:id="@+id/btnDone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/spImportance"
